--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^8.0",
         "jeroennoten/laravel-adminlte": "^3.8",
-        "laravel/ui": "^4.0"
+        "laravel/ui": "^4.0",
+        "realrashid/sweet-alert": "^6.0"
     },
     "license": "MIT",
     "autoload": {
