--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": "^8.0",
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/ui": "^4.0",
-        "realrashid/sweet-alert": "^6.0"
+        "realrashid/sweet-alert": "^6.0",
+        "intervention/image": "^2.7"
     },
     "license": "MIT",
     "autoload": {
