--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/ui": "^4.0",
         "realrashid/sweet-alert": "^6.0",
-        "intervention/image": "^2.7"
+        "intervention/image": "^2.7",
+        "cbschuld/browser.php": "^1.9"
     },
     "license": "MIT",
     "autoload": {
