--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "raikanbrk/kuber",
-    "description": "Biblioteca complementar ao projeto kuber",
+    "description": "Kuber é uma biblioteca Laravel de desenvolvimento de sites que inclui um painel administrativo pré-configurado e recursos poderosos, como gerenciamento de usuários e conteúdo. Uma escolha inteligente para desenvolvedores que desejam economizar tempo e custos no desenvolvimento de sites.",
     "type": "library",
     "minimum-stability": "stable",
     "require": {
